# milkyway-oracle

./: .gitignore  Cargo.toml  Makefile  README.md  tx.json
src/: contract.rs  error.rs  execute.rs  msg.rs  query.rs  state.rs
